--- a/action.yml
+++ b/action.yml
@@ -1,19 +1,19 @@
-name: Sync and merge upstream repository with your current repository 
-description: Syncs and merges your current repository with the upstream repository. Greatly inspired by [actions-registry/github-repo-sync-upstream]. For details see README.md 
-author: Markus Heene 
+name: Sync and merge upstream repository with your current repository
+description: Syncs and merges your current repository with the upstream repository. Greatly inspired by [actions-registry/github-repo-sync-upstream]. For details see README.md
+author: Markus Heene
 
 inputs:
   upstream_repo:
-    description: URL of gitHub public upstream repo 
+    description: URL of gitHub public upstream repo
     required: true
 
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: "docker"
+  image: "Dockerfile"
   args:
     - ${{ inputs.upstream_repo }}
-
+    - ${{ inputs.branch }}
 
 branding:
-  icon: 'git-merge'
-  color: 'blue'
+  icon: "git-merge"
+  color: "blue"
