Add downstream branch selection

--- a/action.yml
+++ b/action.yml
@@ -6,10 +6,14 @@ inputs:
   upstream_repo:
     description: URL of gitHub public upstream repo
     required: true
-  branch:
-    description: Branch main of merge branch
+  upstream_branch:
+    description: Branch to merge from upstream (defaults to downstream branch)
     required: false
     default: "main"
+  downstream_branch:
+    description: Branch to merge into downstream
+    required: false
+    default: ""
   token:
     description: GitHub Bot token
     required: true
@@ -27,7 +31,8 @@ runs:
   image: "Dockerfile"
   args:
     - ${{ inputs.upstream_repo }}
-    - ${{ inputs.branch }}
+    - ${{ inputs.upstream_branch }}
+    - ${{ inputs.downstream_branch }}
     - ${{ inputs.token }}
     - ${{ inputs.merge_args }}
     - ${{ inputs.push_args }}
