Add toggle to log spawn

--- a/action.yml
+++ b/action.yml
@@ -29,6 +29,10 @@ inputs:
     description: Git push arguments
     required: false
     default: ""
+  spawn_logs: 
+    description: Toggle to spawn `sync-upstream-repo` with time logs
+    required: true
+    default: false
 
 runs:
   using: "docker"
@@ -41,6 +45,7 @@ runs:
     - ${{ inputs.fetch_args }}
     - ${{ inputs.merge_args }}
     - ${{ inputs.push_args }}
+    - ${{ inputs.spawn_logs }}
 
 branding:
   icon: "git-merge"
