--- a/action.yml
+++ b/action.yml
@@ -3,36 +3,44 @@ description: Syncs and merges your current repository with the upstream reposito
 author: Dabreadman
 
 inputs:
-  upstream_repo:
-    description: URL of gitHub public upstream repo
+  upstream_repo_url:
+    description: URL of GitHub public upstream repo
     required: true
   upstream_branch:
     description: Branch to merge from upstream (defaults to downstream branch)
     required: false
     default: "main"
+  downstream_repo_url:
+    description: URL of the GitHub repo from upstream
+    required: true
   downstream_branch:
-    description: Branch to merge into downstream
+    description: Branch to merge into downstream, if not provided it will default to the upstream branch name
     required: false
     default: ""
   token:
     description: GitHub Bot token
     required: true
+    default: ${{ secrets.GITHUB_TOKEN }}
+  merge_strategy:
+    description: Merge strategy, controls which git operation (rebase or merge) will be used to synch with upstream. The values allowed are either "rebase" or "merge", with "rebase" being the default.
+    required: false
+    default: "release"
   fetch_args:
     description: Git fetch arguments
     required: false
     default: ""
-  merge_args:
-    description: Git merge arguments
+  rebase_args:
+    description: Git rebase arguments
     required: false
     default: ""
   push_args:
     description: Git push arguments
     required: false
     default: ""
-  spawn_logs: 
-    description: Toggle to spawn `sync-upstream-repo` with time logs
-    required: true
-    default: false
+  merge_args:
+    description: Git merge arguments
+    required: false
+    default: ""  
 
 runs:
   using: "docker"
@@ -40,12 +48,14 @@ runs:
   args:
     - ${{ inputs.upstream_repo }}
     - ${{ inputs.upstream_branch }}
+    - ${{ inputs.downstream_repo }}
     - ${{ inputs.downstream_branch }}
     - ${{ inputs.token }}
+    - ${{ inputs.merge_strategy }}
     - ${{ inputs.fetch_args }}
-    - ${{ inputs.merge_args }}
+    - ${{ inputs.rebase_args }}
     - ${{ inputs.push_args }}
-    - ${{ inputs.spawn_logs }}
+    - ${{ inputs.merge_args }}
 
 branding:
   icon: "git-merge"
